End ANN implementation (history and metrics management missing)

--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:16:27.176262Z",
-     "start_time": "2025-01-27T17:16:27.167607Z"
+     "end_time": "2025-01-28T21:50:01.549501Z",
+     "start_time": "2025-01-28T21:49:21.805717Z"
     }
    },
    "cell_type": "code",
@@ -19,15 +19,15 @@
    ],
    "id": "57daa5998f08eb3a",
    "outputs": [],
-   "execution_count": 298
+   "execution_count": 1
   },
   {
    "cell_type": "code",
    "id": "bd778b3540b7a063",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:16:29.508316Z",
-     "start_time": "2025-01-27T17:16:28.324790Z"
+     "end_time": "2025-01-28T21:51:04.301554Z",
+     "start_time": "2025-01-28T21:51:03.395679Z"
     }
    },
    "source": [
@@ -47,7 +47,7 @@
      ]
     }
    ],
-   "execution_count": 299
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -62,8 +62,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:21:12.861134Z",
-     "start_time": "2025-01-27T17:21:12.790901Z"
+     "end_time": "2025-01-28T21:51:06.568297Z",
+     "start_time": "2025-01-28T21:51:06.550300Z"
     }
    },
    "cell_type": "code",
@@ -668,7 +668,7 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 305
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -679,8 +679,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:16:34.347671Z",
-     "start_time": "2025-01-27T17:16:34.278042Z"
+     "end_time": "2025-01-28T21:51:14.705203Z",
+     "start_time": "2025-01-28T21:51:14.630652Z"
     }
    },
    "cell_type": "code",
@@ -702,19 +702,21 @@
     "v5 = ['Time', 'V1', 'V7', 'V8', 'V9', 'V11', 'V12', 'V14', 'V15', 'V22', 'V27', 'V28', 'Amount', 'Class']\n",
     "datasets.append(data[v5])\n",
     "\n",
-    "# Dataset with full feature vector\n",
     "v6 = data.columns\n",
-    "datasets.append(data[v6])"
+    "datasets.append(data[v6])\n",
+    "\n",
+    "v7 = ['V2', 'V4', 'V5', 'V6', 'V11', 'V12', 'V13', 'V16', 'V17', 'V18', 'V20', 'V21', 'V22', 'V23', 'V25', 'V26', 'V28', 'Amount', 'Class']\n",
+    "datasets.append(data[v7])"
    ],
    "id": "eb28e7c674d5cba6",
    "outputs": [],
-   "execution_count": 301
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:21:16.091455Z",
-     "start_time": "2025-01-27T17:21:16.087499Z"
+     "end_time": "2025-01-28T21:51:16.437172Z",
+     "start_time": "2025-01-28T21:51:16.434130Z"
     }
    },
    "cell_type": "code",
@@ -724,7 +726,7 @@
    ],
    "id": "473f8995aee30b86",
    "outputs": [],
-   "execution_count": 306
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -733,7 +735,12 @@
    "id": "a01a9a9846250598"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-01-28T21:53:37.436483Z",
+     "start_time": "2025-01-28T21:51:17.678283Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "metrics_train_df = None\n",
@@ -746,7 +753,7 @@
     "    x_train, y_train, _, _, x_test, y_test = data_split(data_input=input, train_size=0.8)\n",
     "    \n",
     "    # SMOTE: oversampling\n",
-    "    n_samples = 7500\n",
+    "    n_samples = 6000\n",
     "    x_minority = x_train[y_train[:, 0] == 1] # minority class samples (attacks)\n",
     "    x_train_synthetic = fit_resample(x_minority, n_samples=n_samples) # generate synthetic data for training\n",
     "    y_train_synthetic = np.ones((n_samples,1)) # generate other attack labels as well\n",
@@ -777,8 +784,8 @@
     "            epochs=2000,\n",
     "            batch_size=256,\n",
     "            learning_rate=0.001,\n",
-    "            decay_rate=0.8,\n",
-    "            epsilon=1e-7,\n",
+    "            decay_rate=0.9,\n",
+    "            epsilon=1e-8,\n",
     "        )\n",
     "    )\n",
     "    \n",
@@ -809,13 +816,13 @@
    ],
    "id": "78ad6fb8708346af",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:24:36.541643Z",
-     "start_time": "2025-01-27T17:24:36.492361Z"
+     "end_time": "2025-01-28T21:54:06.926534Z",
+     "start_time": "2025-01-28T21:54:06.878516Z"
     }
    },
    "cell_type": "code",
@@ -826,20 +833,22 @@
      "data": {
       "text/plain": [
        "  Set of features    TP      TN   FP    FN  accuracy  recall  precision  \\\n",
-       "0     v1 training  6186  227290  164  1705     99.21   78.39      97.42   \n",
-       "1     v2 training  5444  227386   68  2447     98.93   68.99      98.77   \n",
-       "2     v3 training  6070  227359   95  1821     99.19   76.92      98.46   \n",
-       "3     v4 training  5957  227377   77  1934     99.15   75.49      98.72   \n",
-       "4     v5 training  6868  227132  322  1023     99.43   87.04      95.52   \n",
-       "5     v6 training  6874  227371   83  1017     99.53   87.11      98.81   \n",
+       "0     v1 training  4996  227317  137  1395     99.34   78.17      97.33   \n",
+       "1     v2 training  4465  227382   72  1926     99.15   69.86      98.41   \n",
+       "2     v3 training  4935  227348  106  1456     99.33   77.22      97.90   \n",
+       "3     v4 training  4770  227384   70  1621     99.28   74.64      98.55   \n",
+       "4     v5 training  5369  227285  169  1022     99.49   84.01      96.95   \n",
+       "5     v6 training  5790  227211  243   601     99.64   90.60      95.97   \n",
+       "6     v7 training  4928  227389   65  1463     99.35   77.11      98.70   \n",
        "\n",
        "   F1-score  \n",
-       "0     86.88  \n",
-       "1     81.24  \n",
-       "2     86.37  \n",
-       "3     85.56  \n",
-       "4     91.08  \n",
-       "5     92.59  "
+       "0     86.70  \n",
+       "1     81.71  \n",
+       "2     86.34  \n",
+       "3     84.94  \n",
+       "4     90.02  \n",
+       "5     93.21  \n",
+       "6     86.58  "
       ],
       "text/html": [
        "<div>\n",
@@ -875,92 +884,104 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>v1 training</td>\n",
-       "      <td>6186</td>\n",
-       "      <td>227290</td>\n",
-       "      <td>164</td>\n",
-       "      <td>1705</td>\n",
-       "      <td>99.21</td>\n",
-       "      <td>78.39</td>\n",
-       "      <td>97.42</td>\n",
-       "      <td>86.88</td>\n",
+       "      <td>4996</td>\n",
+       "      <td>227317</td>\n",
+       "      <td>137</td>\n",
+       "      <td>1395</td>\n",
+       "      <td>99.34</td>\n",
+       "      <td>78.17</td>\n",
+       "      <td>97.33</td>\n",
+       "      <td>86.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>v2 training</td>\n",
-       "      <td>5444</td>\n",
-       "      <td>227386</td>\n",
-       "      <td>68</td>\n",
-       "      <td>2447</td>\n",
-       "      <td>98.93</td>\n",
-       "      <td>68.99</td>\n",
-       "      <td>98.77</td>\n",
-       "      <td>81.24</td>\n",
+       "      <td>4465</td>\n",
+       "      <td>227382</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1926</td>\n",
+       "      <td>99.15</td>\n",
+       "      <td>69.86</td>\n",
+       "      <td>98.41</td>\n",
+       "      <td>81.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>v3 training</td>\n",
-       "      <td>6070</td>\n",
-       "      <td>227359</td>\n",
-       "      <td>95</td>\n",
-       "      <td>1821</td>\n",
-       "      <td>99.19</td>\n",
-       "      <td>76.92</td>\n",
-       "      <td>98.46</td>\n",
-       "      <td>86.37</td>\n",
+       "      <td>4935</td>\n",
+       "      <td>227348</td>\n",
+       "      <td>106</td>\n",
+       "      <td>1456</td>\n",
+       "      <td>99.33</td>\n",
+       "      <td>77.22</td>\n",
+       "      <td>97.90</td>\n",
+       "      <td>86.34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>v4 training</td>\n",
-       "      <td>5957</td>\n",
-       "      <td>227377</td>\n",
-       "      <td>77</td>\n",
-       "      <td>1934</td>\n",
-       "      <td>99.15</td>\n",
-       "      <td>75.49</td>\n",
-       "      <td>98.72</td>\n",
-       "      <td>85.56</td>\n",
+       "      <td>4770</td>\n",
+       "      <td>227384</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>99.28</td>\n",
+       "      <td>74.64</td>\n",
+       "      <td>98.55</td>\n",
+       "      <td>84.94</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>v5 training</td>\n",
-       "      <td>6868</td>\n",
-       "      <td>227132</td>\n",
-       "      <td>322</td>\n",
-       "      <td>1023</td>\n",
-       "      <td>99.43</td>\n",
-       "      <td>87.04</td>\n",
-       "      <td>95.52</td>\n",
-       "      <td>91.08</td>\n",
+       "      <td>5369</td>\n",
+       "      <td>227285</td>\n",
+       "      <td>169</td>\n",
+       "      <td>1022</td>\n",
+       "      <td>99.49</td>\n",
+       "      <td>84.01</td>\n",
+       "      <td>96.95</td>\n",
+       "      <td>90.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>v6 training</td>\n",
-       "      <td>6874</td>\n",
-       "      <td>227371</td>\n",
-       "      <td>83</td>\n",
-       "      <td>1017</td>\n",
-       "      <td>99.53</td>\n",
-       "      <td>87.11</td>\n",
-       "      <td>98.81</td>\n",
-       "      <td>92.59</td>\n",
+       "      <td>5790</td>\n",
+       "      <td>227211</td>\n",
+       "      <td>243</td>\n",
+       "      <td>601</td>\n",
+       "      <td>99.64</td>\n",
+       "      <td>90.60</td>\n",
+       "      <td>95.97</td>\n",
+       "      <td>93.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>v7 training</td>\n",
+       "      <td>4928</td>\n",
+       "      <td>227389</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1463</td>\n",
+       "      <td>99.35</td>\n",
+       "      <td>77.11</td>\n",
+       "      <td>98.70</td>\n",
+       "      <td>86.58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 308,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 308
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-27T17:24:53.550398Z",
-     "start_time": "2025-01-27T17:24:53.531675Z"
+     "end_time": "2025-01-28T21:54:09.594800Z",
+     "start_time": "2025-01-28T21:54:09.588045Z"
     }
    },
    "cell_type": "code",
@@ -971,12 +992,13 @@
      "data": {
       "text/plain": [
        "  Set of features  TP     TN  FP  FN  accuracy  recall  precision  F1-score\n",
-       "0      v1 testing  79  56820  41  22     99.89   78.22      65.83     71.49\n",
-       "1      v2 testing  67  56843  18  34     99.91   66.34      78.82     72.04\n",
-       "2      v3 testing  78  56841  20  23     99.92   77.23      79.59     78.39\n",
-       "3      v4 testing  76  56840  21  25     99.92   75.25      78.35     76.77\n",
-       "4      v5 testing  88  56772  89  13     99.82   87.13      49.72     63.31\n",
-       "5      v6 testing  82  56841  20  19     99.93   81.19      80.39     80.79"
+       "0      v1 testing  79  56824  37  22     99.90   78.22      68.10     72.81\n",
+       "1      v2 testing  68  56843  18  33     99.91   67.33      79.07     72.73\n",
+       "2      v3 testing  78  56838  23  23     99.92   77.23      77.23     77.23\n",
+       "3      v4 testing  76  56844  17  25     99.93   75.25      81.72     78.35\n",
+       "4      v5 testing  86  56818  43  15     99.90   85.15      66.67     74.79\n",
+       "5      v6 testing  84  56795  66  17     99.85   83.17      56.00     66.93\n",
+       "6      v7 testing  75  56848  13  26     99.93   74.26      85.23     79.37"
       ],
       "text/html": [
        "<div>\n",
@@ -1013,85 +1035,97 @@
        "      <th>0</th>\n",
        "      <td>v1 testing</td>\n",
        "      <td>79</td>\n",
-       "      <td>56820</td>\n",
-       "      <td>41</td>\n",
+       "      <td>56824</td>\n",
+       "      <td>37</td>\n",
        "      <td>22</td>\n",
-       "      <td>99.89</td>\n",
+       "      <td>99.90</td>\n",
        "      <td>78.22</td>\n",
-       "      <td>65.83</td>\n",
-       "      <td>71.49</td>\n",
+       "      <td>68.10</td>\n",
+       "      <td>72.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>v2 testing</td>\n",
-       "      <td>67</td>\n",
+       "      <td>68</td>\n",
        "      <td>56843</td>\n",
        "      <td>18</td>\n",
-       "      <td>34</td>\n",
+       "      <td>33</td>\n",
        "      <td>99.91</td>\n",
-       "      <td>66.34</td>\n",
-       "      <td>78.82</td>\n",
-       "      <td>72.04</td>\n",
+       "      <td>67.33</td>\n",
+       "      <td>79.07</td>\n",
+       "      <td>72.73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>v3 testing</td>\n",
        "      <td>78</td>\n",
-       "      <td>56841</td>\n",
-       "      <td>20</td>\n",
+       "      <td>56838</td>\n",
+       "      <td>23</td>\n",
        "      <td>23</td>\n",
        "      <td>99.92</td>\n",
        "      <td>77.23</td>\n",
-       "      <td>79.59</td>\n",
-       "      <td>78.39</td>\n",
+       "      <td>77.23</td>\n",
+       "      <td>77.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>v4 testing</td>\n",
        "      <td>76</td>\n",
-       "      <td>56840</td>\n",
-       "      <td>21</td>\n",
+       "      <td>56844</td>\n",
+       "      <td>17</td>\n",
        "      <td>25</td>\n",
-       "      <td>99.92</td>\n",
+       "      <td>99.93</td>\n",
        "      <td>75.25</td>\n",
+       "      <td>81.72</td>\n",
        "      <td>78.35</td>\n",
-       "      <td>76.77</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>v5 testing</td>\n",
-       "      <td>88</td>\n",
-       "      <td>56772</td>\n",
-       "      <td>89</td>\n",
-       "      <td>13</td>\n",
-       "      <td>99.82</td>\n",
-       "      <td>87.13</td>\n",
-       "      <td>49.72</td>\n",
-       "      <td>63.31</td>\n",
+       "      <td>86</td>\n",
+       "      <td>56818</td>\n",
+       "      <td>43</td>\n",
+       "      <td>15</td>\n",
+       "      <td>99.90</td>\n",
+       "      <td>85.15</td>\n",
+       "      <td>66.67</td>\n",
+       "      <td>74.79</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>v6 testing</td>\n",
-       "      <td>82</td>\n",
-       "      <td>56841</td>\n",
-       "      <td>20</td>\n",
-       "      <td>19</td>\n",
+       "      <td>84</td>\n",
+       "      <td>56795</td>\n",
+       "      <td>66</td>\n",
+       "      <td>17</td>\n",
+       "      <td>99.85</td>\n",
+       "      <td>83.17</td>\n",
+       "      <td>56.00</td>\n",
+       "      <td>66.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>v7 testing</td>\n",
+       "      <td>75</td>\n",
+       "      <td>56848</td>\n",
+       "      <td>13</td>\n",
+       "      <td>26</td>\n",
        "      <td>99.93</td>\n",
-       "      <td>81.19</td>\n",
-       "      <td>80.39</td>\n",
-       "      <td>80.79</td>\n",
+       "      <td>74.26</td>\n",
+       "      <td>85.23</td>\n",
+       "      <td>79.37</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 309
+   "execution_count": 8
   }
  ],
  "metadata": {
