Fix comments and documentation

--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -9,6 +9,7 @@
    },
    "cell_type": "code",
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import jax.numpy as jnp\n",
     "import jax\n",
@@ -76,13 +77,16 @@
     "\n",
     "    def initialize_parameters(self, layers_size=None):\n",
     "        \"\"\"\n",
-    "            Sets the parameters of the artificial neural network given the number of\n",
+    "            Returns the parameters of the artificial neural network given the number of\n",
     "            neurons of its layers, namely it sets the matrix of weights and the bias\n",
-    "            vector for each layer \n",
+    "            vector for each layer, initialized randomly\n",
     "          \n",
     "            Parameters:\n",
     "            layers_size: list - ordered sizes of the layers of the artificial neural network\n",
-    "            \n",
+    "\n",
+    "            Returns:\n",
+    "            params: list - parameters of the artificial neural network, namely weights and biases\n",
+    "\n",
     "            Raises:\n",
     "            exception: if layers_size is not provided\n",
     "        \"\"\"\n",
@@ -629,15 +633,14 @@
     "        \n",
     "            Parameters:\n",
     "            x: ndarray - input of the artificial neural network\n",
-    "            act_func: callable - activation function of the artificial neural network\n",
-    "            out_act_fun: callable - output activation function of the artificial neural network\n",
+    "            params: ndarray - parameters of the artificial neural network, namely weights and biases\n",
     "        \n",
     "            Returns: \n",
     "            ndarray - output value of the artificial neural network\n",
     "                \n",
     "            Raises:\n",
     "            Exception - if x is not provided\n",
-    "            Exception - if parameters were not initialized\n",
+    "            Exception - if params were not initialized\n",
     "        \"\"\"\n",
     "        \n",
     "        if x is None:\n",
