--- a/notebooks/Decision trees.ipynb
+++ b/notebooks/Decision trees.ipynb
@@ -73,12 +73,12 @@
     "\n",
     "---\n",
     "\n",
-    "***Feature importance*** measures how much each feature contributes to the decsion-making process of the DT;in other words, it represents how much the impurity is reduced across all the splits where that feature is employed. Let $f$ a feature, $\\Delta \\mathcal{I}(y)$ the impurity decrease at nodee $y$, $n_y$ the number of samples at $y$, $N$ the total number of samples in the dataset and $Y_f$ set of nodes where feature $f$ is used for splitting; then, the importance of $f$ is given by:\n",
+    "***Feature importance*** measures how much each feature contributes to the decsion-making process of the DT; in other words, it represents how much the impurity is reduced across all the splits where that feature is employed. Let $f$ a feature, $\\Delta \\mathcal{I}(y)$ the impurity decrease at nodee $y$, $n_y$ the number of samples at $y$, $N$ the total number of samples in the dataset and $Y_f$ set of nodes where feature $f$ is used for splitting; then, the importance of $f$ is given by:\n",
     "$$\\mathcal{M}(f)=\\sum_{y\\in Y_f}\\frac{n_y}{N}\\Delta \\mathcal{I(y)}=\\sum_{y\\in Y_f}\\frac{n_y}{N}\\left[\\mathcal{I}(y)-\\left(\\frac{n_{left}}{n_y}\\cdot \\mathcal{I}(y_{left})+\\frac{n_{right}}{n_y}\\cdot \\mathcal{I}(y_{right})\\right)\\right]$$\n",
-    "Finally, to make the importance score comparable, we can normalize them:\n",
+    "Finally, to make the importance scores comparable, we can normalize them:\n",
     "$$\\mathcal{M}_n(f)=\\frac{\\mathcal{M}(f)}{\\sum_{f'}\\mathcal{M}(f')}$$\n",
     "\n",
-    "Note: feature importance might be interesting to study if we develop the GA for features selection.\n"
+    "Note: feature importance should be studied if we had to choose a subset of most representative features.\n"
    ]
   },
   {
