--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -125,6 +125,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ***GA algorithm definition***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
