--- a/notebooks/GA.ipynb
+++ b/notebooks/GA.ipynb
@@ -202,7 +202,7 @@
     "        \n",
     "        inst.fit(X_train, y_train)\n",
     "\n",
-    "        y_pred = inst.predict(X_test)\n",
+    "        y_pred, _ = inst.predict(X_test)\n",
     "\n",
     "        return self.fit_funct(y_pred, y_test)\n",
     "\n",
@@ -362,7 +362,7 @@
     "                c (np.ndarray): the chromosome to be decoded.\n",
     "            \n",
     "            Returns:\n",
-    "                str_version (list): the decode chormosome in form of a list of strings.\n",
+    "                str_version (list): the decoded chormosome in form of a list of strings.\n",
     "        \"\"\"\n",
     "\n",
     "        str_version = []\n",
@@ -378,7 +378,33 @@
     "            if str_version[i] == \"V29\":\n",
     "                str_version[i] = \"Amount\"\n",
     "\n",
-    "        return str_version"
+    "        return str_version\n",
+    "    \n",
+    "    def encode(self, str_version):\n",
+    "        \"\"\"\n",
+    "            Utility method to encode a list of strings corresponding to the features of the dataset into a chromosome.\n",
+    "\n",
+    "            Args:\n",
+    "                str_version (list): the list of strings to be encoded.\n",
+    "\n",
+    "            Returns:\n",
+    "                c (np.ndarray): the resulting chromosome.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        c = np.zeros(len(self.features), dtype = int)\n",
+    "\n",
+    "        for i in range(len(str_version)):\n",
+    "            if str_version[i] != \"Amount\" and str_version[i] != \"Time\":\n",
+    "                c[int(str_version[i][1:])] = 1\n",
+    "                \n",
+    "        for i in range(len(str_version)):\n",
+    "            if str_version[i] == \"Time\":\n",
+    "                c[0] = 1\n",
+    "            \n",
+    "            if str_version[i] == \"Amount\":\n",
+    "                c[-1] = 1\n",
+    "\n",
+    "        return c"
    ]
   },
   {
@@ -453,46 +479,34 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\matte\\Desktop\\NAML-Project\\notebooks\\..\\utils\\models\\NaiveBayes.py:97: RuntimeWarning: invalid value encountered in divide\n",
-      "  probs = np.exp(posteriors) / np.sum(np.exp(posteriors), axis = 1, keepdims = True)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Currect generation: 0\n",
       "Currect generation: 5\n",
       "Currect generation: 10\n",
-      "Currect generation: 15\n",
-      "Currect generation: 20\n",
-      "Currect generation: 25\n",
-      "Currect generation: 30\n",
-      "Currect generation: 35\n",
-      "Currect generation: 40\n",
-      "Currect generation: 45\n"
+      "Currect generation: 15\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "array([1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 0,\n",
-       "       0, 0, 1, 0, 1, 1, 0, 0])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m X_train_nb_1, y_train_nb_1 \u001b[38;5;241m=\u001b[39m X_train, y_train\n\u001b[1;32m----> 3\u001b[0m best_feats_nb_1, max_fit_nb_1, feats_hist_nb_1, fit_hist_nb_1 \u001b[38;5;241m=\u001b[39m \u001b[43mga\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train_nb_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train_nb_1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m ga\u001b[38;5;241m.\u001b[39mdecode(best_feats_nb_1)\n",
+      "Cell \u001b[1;32mIn[2], line 191\u001b[0m, in \u001b[0;36mGeneticAlgorithm.run\u001b[1;34m(self, X_train, y_train, X_test, y_test)\u001b[0m\n\u001b[0;32m    188\u001b[0m     B[i, mut_probs \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmut_prob] \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m B[i, mut_probs \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmut_prob]\n\u001b[0;32m    190\u001b[0m \u001b[38;5;66;03m#At the end, compute again the fitness of each individual in the initial population and the maximum fit reached\u001b[39;00m\n\u001b[1;32m--> 191\u001b[0m fits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspawn_threads_fitness\u001b[49m\u001b[43m(\u001b[49m\u001b[43mB\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    192\u001b[0m c_max_fit, c_max_fit_id \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmax(fits), np\u001b[38;5;241m.\u001b[39margmax(fits)\n\u001b[0;32m    194\u001b[0m feats_history\u001b[38;5;241m.\u001b[39mappend(B[c_max_fit_id, :])\n",
+      "Cell \u001b[1;32mIn[2], line 127\u001b[0m, in \u001b[0;36mGeneticAlgorithm.spawn_threads_fitness\u001b[1;34m(self, B, X_train, y_train, X_test, y_test)\u001b[0m\n\u001b[0;32m    124\u001b[0m \u001b[38;5;66;03m#Create a thread pool with at most 20 threads (typically max_workers = min(20, num-cores_of_machine))\u001b[39;00m\n\u001b[0;32m    125\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m ThreadPoolExecutor(max_workers \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m executor:\n\u001b[0;32m    126\u001b[0m     \u001b[38;5;66;03m#To vectorize the function fitness, we need to create a list of tuples, each containing the attributes to be passed to the method\u001b[39;00m\n\u001b[1;32m--> 127\u001b[0m     args \u001b[38;5;241m=\u001b[39m [(X_train[:, b\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mbool\u001b[39m)], y_train, X_test[:, \u001b[43mb\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mbool\u001b[39;49m\u001b[43m)\u001b[49m], y_test) \u001b[38;5;28;01mfor\u001b[39;00m b \u001b[38;5;129;01min\u001b[39;00m B]\n\u001b[0;32m    129\u001b[0m     \u001b[38;5;66;03m#Then, we use the exeutor to compute the fitnes scores\u001b[39;00m\n\u001b[0;32m    130\u001b[0m     fits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(executor\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28;01mlambda\u001b[39;00m p: \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfitness(\u001b[38;5;241m*\u001b[39mp), args)) \n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
     "X_train_nb_1, y_train_nb_1 = X_train, y_train\n",
     "\n",
     "best_feats_nb_1, max_fit_nb_1, feats_hist_nb_1, fit_hist_nb_1 = ga.run(X_train_nb_1, y_train_nb_1, X_test, y_test)\n",
-    "best_feats_nb_1"
+    "ga.decode(best_feats_nb_1)"
    ]
   },
   {
@@ -566,7 +580,7 @@
     "X_train_nb_2, y_train_nb_2 = X_train, y_train\n",
     "\n",
     "best_feats_nb_2, max_fit_nb_2, feats_hist_nb_2, fit_hist_nb_2 = ga.run(X_train_nb_2, y_train_nb_2, X_test, y_test)\n",
-    "best_feats_nb_2"
+    "ga.decode(best_feats_nb_2)"
    ]
   },
   {
@@ -639,7 +653,7 @@
     "X_train_rf, y_train_rf = undersample(X_train, y_train, 0, 1 - (sum(y_train) * 300.0 / X_train.shape[0]))\n",
     "\n",
     "best_feats_rf, max_fit_rf, feats_hist_rf, fit_hist_rf = ga.run(X_train_rf, y_train_rf, X_test, y_test)\n",
-    "best_feats_rf"
+    "ga.decode(best_feats_rf)"
    ]
   },
   {
@@ -712,7 +726,7 @@
     "X_train_dt, y_train_dt = undersample(X_train, y_train, 0, 0.5)\n",
     "\n",
     "best_feats_dt, max_fit_dt, feats_hist_dt, fit_hist_dt = ga.run(X_train_dt, y_train_dt, X_test, y_test)\n",
-    "best_feats_dt"
+    "ga.decode(best_feats_dt)"
    ]
   },
   {
