Update comments and logistic regression

--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -777,7 +777,7 @@
     "    # Initialize weights and biases\n",
     "    params = network.initialize_parameters([x_train_normalized.shape[1], 30, 20, 1])\n",
     "    \n",
-    "    # Train ann, with gradient descent - mean squared error\n",
+    "    # Train ann\n",
     "    updated_params, history = network.train(\n",
     "        x_train = x_train_normalized, \n",
     "        y_train = y_train, \n",
