--- a/notebooks/Decision trees.ipynb
+++ b/notebooks/Decision trees.ipynb
@@ -76,9 +76,7 @@
     "***Feature importance*** measures how much each feature contributes to the decsion-making process of the DT; in other words, it represents how much the impurity is reduced across all the splits where that feature is employed. Let $f$ a feature, $\\Delta \\mathcal{I}(y)$ the impurity decrease at nodee $y$, $n_y$ the number of samples at $y$, $N$ the total number of samples in the dataset and $Y_f$ set of nodes where feature $f$ is used for splitting; then, the importance of $f$ is given by:\n",
     "$$\\mathcal{M}(f)=\\sum_{y\\in Y_f}\\frac{n_y}{N}\\Delta \\mathcal{I(y)}=\\sum_{y\\in Y_f}\\frac{n_y}{N}\\left[\\mathcal{I}(y)-\\left(\\frac{n_{left}}{n_y}\\cdot \\mathcal{I}(y_{left})+\\frac{n_{right}}{n_y}\\cdot \\mathcal{I}(y_{right})\\right)\\right]$$\n",
     "Finally, to make the importance scores comparable, we can normalize them:\n",
-    "$$\\mathcal{M}_n(f)=\\frac{\\mathcal{M}(f)}{\\sum_{f'}\\mathcal{M}(f')}$$\n",
-    "\n",
-    "Note: feature importance should be studied if we had to choose a subset of most representative features.\n"
+    "$$\\mathcal{M}_n(f)=\\frac{\\mathcal{M}(f)}{\\sum_{f'}\\mathcal{M}(f')}$$"
    ]
   },
   {
@@ -551,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +626,7 @@
        "       0.        , 0.        , 0.05718654])"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +647,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], shape=(85443,))"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
